# thilimem

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
tests/: test_thilimem.py
thilimem/: __init__.py  agent.py  consolidate.py  embeddings.py  entities.py  eval.py  extract.py  llm.py  retrieve.py  store.py  types.py
